fix the bug:register form too high and regiter with chinese name

--- a/openstack-dashboard/static/dashboard/less/horizon.less
+++ b/openstack-dashboard/static/dashboard/less/horizon.less
@@ -138,6 +138,7 @@ body {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
   background-clip: padding-box;
+  height: 548px;
 
   form {
     .error {
